--- a/simple-test-mongo/src/app/addUser/addUser/addUser.component.html
+++ b/simple-test-mongo/src/app/addUser/addUser/addUser.component.html
@@ -36,5 +36,8 @@
         #marca="ngModel"
       />
     </div>
+    <div class="col-12 mt-5">
+      <button type="submit" class="btn btn-primary col-12">Add User</button>
+    </div>
   </form>
 </div>
