--- a/simple-test-mongo/src/app/users/user/user.component.html
+++ b/simple-test-mongo/src/app/users/user/user.component.html
@@ -1,6 +1,8 @@
 <div class="container">
   <table>
-    <th>1</th>
-    <td>2S</td>
+    <ng-container>
+      <th>1</th>
+      <td>2S</td>
+    </ng-container>
   </table>
 </div>
