--- a/simple-test-mongo/src/app/users/user/user.component.html
+++ b/simple-test-mongo/src/app/users/user/user.component.html
@@ -1,8 +1,6 @@
 <div class="container">
-  <table>
-    <ng-container>
-      <th>1</th>
-      <td>2S</td>
-    </ng-container>
-  </table>
+  <ul *ngFor="let item of users; let i = index">
+    <li>{{ item.name }} {{ item.surname }}</li>
+    <li>{{ item.email }}</li>
+  </ul>
 </div>
