--- a/simple-test-mongo/src/app/input/input/input.component.html
+++ b/simple-test-mongo/src/app/input/input/input.component.html
@@ -1,1 +1,22 @@
-<p>input works!</p>
+<form (ngSubmit)="onSubmit(f)" #f="ngForm">
+  <input
+    type="text"
+    name="name"
+    [(ngModel)]="user.name"
+    required
+    placeholder="name"
+  />
+  <input
+    type="text"
+    name="description"
+    [(ngModel)]="user.lastname"
+    placeholder="lastname"
+  />
+  <input
+    type="text"
+    name="description"
+    [(ngModel)]="user.email"
+    placeholder="email"
+  />
+  <button type="submit">Submit</button>
+</form>
